docker/kubernetes/web/deployment.yml
apiVersion: apps/v1beta1
kind: Deployment
metadata:
  name: 1biz-web
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: 1biz-web
    spec:
      imagePullSecrets:
        - name: regcred
      containers:
        - name: 1biz-web
          image: "registry.gitlab.com/sassoftinc/1biz:latest"
          imagePullPolicy: Always
          ports:
            - containerPort: 80
              name: 1biz-http
