docker/kubernetes/web/service.yml
---
apiVersion: v1
kind: Service
metadata:
  name: biz-web
spec:
  ports:
    -  name: http
       port: 80
       protocol: TCP
       targetPort: 80
    -  name: https
       port: 443
       protocol: TCP
       targetPort: 80
  selector:
    app: 1biz-web
  type: ClusterIP
